# rbn-parser

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
benches/: parser_bench.rs
docs/plans/: 2026-01-07-config-file-design.md  2026-01-07-prometheus-metrics-and-filters-design.md  2026-01-07-spot-storage-design.md  2026-01-08-multi-callsign-polo-design.md  2026-01-08-multi-callsign-polo-implementation.md
src/: client.rs  config.rs  filter.rs  lib.rs  main.rs  metrics.rs  parser.rs  polo.rs  spot.rs  stats.rs  storage.rs
