[package]
name = "rbn-parser"
version = "0.1.0"
edition = "2024"
description = "A Rust server for parsing CW spots from the Reverse Beacon Network"
license = "MIT"
authors = ["Jay <w6jsv@arrl.net>"]

[dependencies]
# Parsing
nom = "8"

# Async runtime and networking
tokio = { version = "1", features = ["full"] }

# HTTP server for metrics
axum = "0.8"

# Metrics and statistics
hdrhistogram = "7"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization (for future API)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
clap = { version = "4", features = ["derive"] }
toml = "0.8"
dirs = "6"

[dev-dependencies]
proptest = "1"
criterion = "0.5"

[[bench]]
name = "parser_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
